# sctram

./: .buildinfo  .cookietemple.yml  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.rst  authors.html  code_of_conduct.html  codecov.yml  contributing.html  cookietemple.cfg  genindex.html  index.html  installation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  usage.html
.github/: dependabot.yml
.github/workflows/: build_package.yml  labeler.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
_modules/: index.html
_modules/sctram/: _doctest.html
_notebooks/: _doctest.html
_sources/: installation.rst.txt  reference.rst.txt
_sources/_notebooks/: _doctest.ipynb.txt
docs/: Makefile  authors.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat  readme.rst  reference.rst  requirements.txt  usage.rst
makefiles/: Linux.mk  Windows.mk
reproducibility/environments/: README.md  development.yaml  sctram_poetry_3_9_env.yaml
sctram/: __init__.py  __main__.py  _doctest.py
tests/: __init__.py  test_main.py
