[tool.poetry]
name = "sctram"
version = "0.0.1"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Single Cell Trajectory Representation Metrics"
authors = ["Kemal Inecik <k.inecik@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/theislab/sctram"
repository = "https://github.com/theislab/sctram"
documentation = "https://sctram.readthedocs.io"
packages = [
    { include = "sctram" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# dependencies are versioned based on their version on 19 October 2019, when Python 3.8 was released.
PyYAML = ">=5.2"
pandas = ">=0.25.3"
numpy = ">=1.17.4"
networkx = ">=2.4"
requests = ">=2.22.0"
tqdm = ">=4.37.0"

[tool.poetry.dev-dependencies]
click = ">=8.0.0"
rich = ">=10.3.0"
pytest = ">=6.2.3"
coverage = {extras = ["toml"], version = ">=5.3"}
safety = ">=1.9.0"
typeguard = ">=2.12.0"
xdoctest = {extras = ["colors"], version = ">=0.15.0"}
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.11.1"
flake8 = ">=3.8.4"
black = ">=20.8b1"
flake8-bandit = "2.0.0"
flake8-bugbear = ">=21.4.3"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.3"
pep8-naming = ">=0.11.1"
darglint = ">=1.5.8"
pre-commit-hooks = ">=4.0.1"
sphinx-rtd-theme = ">=0.5.0"
sphinx-click = ">=3.0.0"
Pygments = ">=2.8.1"
# types-pkg-resources, which was unceremoniously disappeared from the Python supply chain. instead `types-setuptools`
types-setuptools = ">=71.1.0"
types-requests = ">=2.25.2"
types-attrs = ">=19.1.0"
sphinx-rtd-dark-mode = ">=1.2.3"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
pyupgrade = ">=2.31.0"
bandit = "^1.7.4"
flake8-builtins = "^1.5.3"
flake8-colors = "^0.1.9"
nbsphinx = "^0.8.9"
types-PyYAML = "^6.0.11"
ipython = "^8.4.0"
isort = "^5.12.0"

[tool.poetry.scripts]
sctram = "sctram.__main__:main"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.coverage.paths]
source = ["sctram", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["sctram"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
